<resources>
    <string name="app_name">Messenger2</string>
    <string name="title">Messenger</string>
    <string name="your_email">Your email:</string>
    <string name="password">Password:</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password_reset">Forgot password?</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="logout">Logout</string>
    <string name="reset_link_sent">The reset link has been successfully sent</string>
    <string name="fill_in_all_the_fields">Fill in all the fields</string>
    <string name="your_message">Your message</string>

</resources>